--- a/Meteor/homemonitor/client/partials/SideNav.html
+++ b/Meteor/homemonitor/client/partials/SideNav.html
@@ -2,6 +2,7 @@
 <nav class="side-nav">
 	<ul>
 		<li><a href="/dispositivos"><i class="fa fa-list"></i>Dispositivos</a></li>
+		<li><a href="/parametros"><i class="fa fa-list"></i>Parametros</a></li>
 		<li><a href="/recipe-book"><i class="fa fa-list"></i>Recipe Book</a></li>
 		<li><a href="/menu"><i class="fa fa-map-o"></i>Menu</a></li>
 		<li><a href="/shopping-list"><i class="fa fa-shopping-cart"></i>Shopping List</a></li>
