etapa modulos en dispositivo
modulo en dispositivo

--- a/Meteor/homemonitor/client/partials/SideNav.html
+++ b/Meteor/homemonitor/client/partials/SideNav.html
@@ -1,11 +1,12 @@
 <template name="SideNav">
 <nav class="side-nav">
 	<ul>
+		<li><a href="/dash"><i class="fa fa-home"></i>Dash</a></li>
 		<li><a href="/dispositivos"><i class="fa fa-list"></i>Dispositivos</a></li>
-		<li><a href="/parametros"><i class="fa fa-list"></i>Parametros</a></li>
-		<li><a href="/recipe-book"><i class="fa fa-list"></i>Recipe Book</a></li>
-		<li><a href="/menu"><i class="fa fa-map-o"></i>Menu</a></li>
-		<li><a href="/shopping-list"><i class="fa fa-shopping-cart"></i>Shopping List</a></li>
+		<li><a href="/parametros"><i class="fa fa-cogs"></i>Parametros</a></li>
+		<!--<li><a href="/recipe-book"><i class="fa fa-list"></i>Recipe Book</a></li>-->
+		<!--<li><a href="/menu"><i class="fa fa-map-o"></i>Menu</a></li>-->
+		<!--<li><a href="/shopping-list"><i class="fa fa-shopping-cart"></i>Shopping List</a></li>-->
 	</ul>
 </nav>
 </template>
