--- a/Meteor/homemonitor/client/partials/header.html
+++ b/Meteor/homemonitor/client/partials/header.html
@@ -1,6 +1,7 @@
 <template name="Header">
 	<header>
 		<h1>JAMBAR 0.1</h1>
+		<i class="fa fa-paw"></i>
 		{{> loginButtons}}
 	</header>
 </template>
