--- a/Meteor/homemonitor/styles.styl
+++ b/Meteor/homemonitor/styles.styl
@@ -31,16 +31,18 @@ $wide = 1200px
 black = #222
 grey = #D8D8D8
 light-grey = #EEE
-purp = #524763
-dark-purp = #373142
+//purp = #524763
+purp = #028090
+//dark-purp = #373142
+dark-purp = #114B5F
 red = #E54B4B
-teal = #82D8D8
+teal = #03B5AA
 dark-teal = #66A6A6
 green = #CBE56C
-blue = #16528E
+blue = #456990
 bright-blue = #0082C8
 maroon = #6A2140
-light-red = #CA5765
+light-red = #F45B69
 pink = #CF256D
 orange = #E8846B
 
