--- a/Meteor/homemonitor/styles.styl
+++ b/Meteor/homemonitor/styles.styl
@@ -21,10 +21,10 @@ shadow-level(l = 1)
 trans($sec = 0.3s)
     transition: all $sec ease
 // Grid
-$xsmall = 340px
+$xsmall = 320px
 $small = 500px
-$med = 700px
-$large = 960px
+$med = 600px
+$large = 992px
 $wide = 1200px
 
 // Colors
@@ -77,7 +77,7 @@ html
 
 body
     background light-grey
-    padding: 70px 0 150px
+    padding: 60px 0 100px
 
 header
     color #FFF 
@@ -85,10 +85,18 @@ header
     padding 20px 
     fixed top left
     width 100%
-    height 70px  
+    height 60px  
     z-index: z.header
     shadow-level(2)
     clearfix()
+    .fa
+       position:absolute
+       top 0
+       left 0
+       opacity 0.3
+       cursor pointer
+       font-size 4.5em  
+       display block                
     h1 
         margin 0
         font-size 1.6em 
@@ -112,7 +120,7 @@ p
     color #FFF
     font-size 2em
     text-align center
-    padding 60px 
+    padding 50px 
     h2
         margin 0
 
@@ -143,11 +151,26 @@ p
         top 0
         right 0
         padding 20px   
+        opacity 0.3
+        cursor pointer
+        font-size 1.6em  
+        display block
+        color black
+        trans()
+        &:hover
+            color red 
+            opacity 0.6
     label
         display block
         margin-bottom 10px 
     textarea, input
         width 100% 
+    h3
+        font-size: 3em;
+        opacity: 0.3;
+        border-bottom: rgba(0,0,0, 0.3) solid 3px
+        margin-top 0
+        margin-bottom 10px    
 
 .btn, button
     display inline-block
@@ -359,6 +382,20 @@ input, select, textarea
         shadow-level(3)
         // animation card 0.6s ease 1 forwards
 
+/* Color of invalid field 
+.has-error .control-label,
+.has-error .help-block,
+.has-error .form-control-feedback {
+    color: red;
+}*/
+
+/* Color of valid field 
+.has-success .control-label,
+.has-success .help-block,
+.has-success .form-control-feedback {
+    color: red;
+}        
+*/
 @keyframes card
     0%
         transform translate3d(0, 0, 0)
@@ -374,6 +411,22 @@ input, select, textarea
             
 .menu-item
     @extend .recipe
+.dash-item    
+    @extend .recipe
+    display:inline-block;
+    .fa
+        top 0
+        right 0
+        padding 20px   
+        opacity 0.3
+        cursor pointer
+        font-size 5em  
+        display block
+        color black
+        trans()
+        &:hover
+            color red 
+            opacity 0.6
     
 .shopping-list
     @extend .recipe
